cmake_minimum_required(VERSION 3.13)
project(OOPClassWork)

set(CMAKE_CXX_STANDARD 17)

add_executable(OOPClassWork main.cpp menu/Menu.cpp menu/Menu.h week6/week6.cpp week6/1/MyMain.cpp week6/1/Func1.cpp week6/1/Func2.cpp week6/1/Header.h week6/3/a.h week6/3/mainApp.cpp week6/3/Header.h week6/3/b.h week6/4/pen.h week6/4/folder.h week6/4/printer.h week6/4/sun.h week6/4/pen.cpp week6/4/folder.cpp week6/4/printer.cpp week6/4/sun.cpp week6/5/TRandom.cpp week6/5/TRandom.h week6/6/Dice.cpp week6/6/Dice.h week7/week7.cpp week7/1/encrypt.cpp week7/1/encrypt.h week7/2/Book.cpp week7/2/Book.h week7/3/Card.cpp week7/3/Card.h)